--- a/templates/createChairperson.html
+++ b/templates/createChairperson.html
@@ -76,8 +76,8 @@ Fill the form below, to register new COWSO Chairperson
 
 </table>
 <br>
-<input type = "submit" name = "create user" value = "submit" />
-<input type = "reset"  value = "cancel" />
+<input type = "submit" name = "submit" value = "Register user" />&#160;&#160;
+<input type = "reset"  value = "Cancel" />
 </form>
 
 
