--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -13,7 +13,7 @@
 <div class = "span6"><a href = "{% url 'waterpointDetail' user.id %}">Create new water point</a><br>
 </div>
 <div class = "span6">
-<a href = "{% url 'waterpointPhotos'%}">add photos for water point</a>
+<a href = "{% url 'waterpointPhotos' user.id %}">add photos for water point</a>
 </div>	
 
 </div>
