--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 {% csrf_token %}	
 <b>username :&#160;&#160;&#160;</b><input type = 'text' name = 'username' placeholder = 'enter your E-mail'/> <br>
 <b>password :&#160;&#160;&#160;</b><input type = 'password' name = 'password' size = '20' placeholder = 'enter your password' /> <br><br>
-<input type = 'submit' value = 'login' name = 'login' />
+<input type = 'submit' value = 'Login' name = 'login' />
 </form>
 
 {% endblock %}
