update home user interface for engineer and admin

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -22,21 +22,21 @@
 District water Engineer is one involving to add static infromation.<br>	
 To add successful register new District water Engineer in the system,<br>
 <ul>
-<li>click link below</li>
-<li>fill all information on the from</li>
-<li>click submit to register new user or cancel to reset</li>
+<li>click link on "Register new District water Engineer" ,below</li>
+<li>ill all information on the provided form</li>
+<li>click "Register user" buttom to register new user or cancel to reset the form</li>
 </ul>
-<a href = "{% url 'createEngineer' user.id %}">add engineer</a>
+<a href = "{% url 'createEngineer' user.id %}">Register new District water Engineer</a>
 </td>
 <td>
 COWSO chairperson is one involving to add dynamic infromation.<br>	
-To add successful register new District water Engineer in the system,
+To add successful register new District water Engineer in the system,<br>
 <ul>
-<li>click link below</li>
-<li>fill all information on the from</li>
-<li>click submit to register new user or cancel to reset</li>
+<li>click link on "Register new COWSO chairperson", below</li>
+<li>fill all information on the provided form</li>
+<li>click "Register user" buttom to register new user or "Cancel" to reset the form</li>
 </ul>
-<a href = "{% url 'createChairperson' user.id %}">add Cowso</a>
+<a href = "{% url 'createChairperson' user.id %}">Register new COWSO chairperson</a>
 </td>
 <td>still under development. Please wait!!!</td>
 
