--- a/templates/chairperson.html
+++ b/templates/chairperson.html
@@ -3,14 +3,13 @@
 {% block page_contents %}
 <!-- information about current user and logout option -->
 <span class ='pull-right welcomeinfo'>{{welcome_info}} <i>,&#160;{{user.cowso_chairperson_name}}.</i>&#160;&#160;<a href = "{% url 'log_out' user.id user.e_mail user.password position %}" >log out</a></span><hr><br>
-
+{% if waterpoint_update %}
+{{waterpoint_update}}
 <!-- update form for water point status-->
 <form action = "" method = "">
 <!-- checking and display all water point for a particular COWSO chairperson-->	
-{% for waterpoint in waterpointslist%}
-{% if waterpoint.physical_location_name == p %}
-{{waterpoint}} 
-
+{% for waterpoint in waterpoint_update %}
+{{waterpoint}}
 <!-- status choices -->
 <select name = "status">
 <option value = "">---------</option>
@@ -19,12 +18,14 @@
 <option value = "need to repair" name = "status" > need to repair </option>
 </select>
 
-{% endif %}
 <br>
 {% endfor %}
 <input type = "submit" value = "update" name "update" />
 <input type = "reset" value = "cancel" name "cancel" />
 </form>
+{% else %}
+no water point to update
+{% endif %}
 
 {% endblock %}
 
