update own style

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,14 @@ text-transform:capitalize;
 td{
 text-align:justify;
 }
+.datails_in_admin_ui{
+color:#4D4D4D;
+font-size:17px;
+}
+.datails_in_admin_ui li{
+font-style:italic;
+color:#4D4D4D;
+}
 #field_name{
 text-align:justify;
 text-transform:capitalize;
