--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,15 +12,15 @@
 <!-- header in admin intaerface -->
 <th>District water Engineer </th>
 <th>COWSO chairperson</th>
-<th>Reports</th>
+<th>Reports and Userful links</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <!-- details about respectively header-->
-<td >
+<td class = 'datails_in_admin_ui'>
 District water Engineer is one involving to add static infromation.<br>	
-To add successful register new District water Engineer in the system,<br>
+To add successful register new District water Engineer in the system :<br>
 <ul>
 <li>click link on "Register new District water Engineer" ,below</li>
 <li>ill all information on the provided form</li>
@@ -28,9 +28,9 @@ To add successful register new District water Engineer in the system,<br>
 </ul>
 <a href = "{% url 'createEngineer' user.id %}">Register new District water Engineer</a>
 </td>
-<td>
+<td class = 'datails_in_admin_ui'>
 COWSO chairperson is one involving to add dynamic infromation.<br>	
-To add successful register new District water Engineer in the system,<br>
+To add successful register new District water Engineer in the system :<br>
 <ul>
 <li>click link on "Register new COWSO chairperson", below</li>
 <li>fill all information on the provided form</li>
@@ -38,7 +38,10 @@ To add successful register new District water Engineer in the system,<br>
 </ul>
 <a href = "{% url 'createChairperson' user.id %}">Register new COWSO chairperson</a>
 </td>
-<td>still under development. Please wait!!!</td>
+<td>
+<!-- useful links and report's links -->
+
+</td>
 
 </tr>
 </tbody>
