--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,7 +12,7 @@
 <!-- header in admin intaerface -->
 <th>District water Engineer </th>
 <th>COWSO chairperson</th>
-<th>Reports and Userful links</th>
+<th>useful links</th>
 </tr>
 </thead>
 <tbody>
@@ -40,7 +40,7 @@ To add successful register new District water Engineer in the system :<br>
 </td>
 <td>
 <!-- useful links and report's links -->
-
+hhdfhdfhfhfdh;f;fjjsjj;sjf;sofjlsjfjsofsjf
 </td>
 
 </tr>
