--- a/templates/chairperson.html
+++ b/templates/chairperson.html
@@ -4,7 +4,9 @@
 <!-- information about current user and logout option -->
 <span class ='pull-right welcomeinfo'>{{welcome_info}} <i>,&#160;{{user.cowso_chairperson_name}}.</i>&#160;&#160;<a href = "{% url 'log_out' user.id user.e_mail user.password position %}" >log out</a></span><hr><br>
 {% if waterpoint_update %}
-
+<!-- info or error message during registration -->
+<h4>{% if message or warning%}{{message}} <i ><span style = 'color:red';>{{warning}}</span></i></h4>
+{% endif %}<br>
 <!-- update form for water point status-->
 <form action = "{% url 'update_waterpoint' user.id user_location %}" method = "POST">
 {% csrf_token %}
