--- a/templates/cowsoupdateinfo.html
+++ b/templates/cowsoupdateinfo.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags %}
+
+<!-- titlte -->
+{% block tilte %}Thanks{% endblock%}
+
 <!-- contents for info after update water points templates-->
 {% block page_contents %}
 <hr>
