--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags %}
+
+<!-- titlte -->
+{% block tilte %}Log in{% endblock%}
+
 <!-- contents for the login templates-->
 {% block page_contents %}
 
