--- a/templates/notlogin.html
+++ b/templates/notlogin.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags %}
+
+<!-- titlte -->
+{% block tilte %}Not login{% endblock%}
+
 {% block page_contents %}
 <!-- message to be displayed -->
 <hr>
