--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 	
 <!--heading-->	
 <head>
-	<title >Ministry of Water</title>
+	<title >{% block tilte %}{% endblock%} - Ministry Of Water</title>
 <meta charset="utf-8">
 <!--
 <meta http-equiv='refresh' content='60' > -->
